fix(Accordion): adjust padding to hide scrollbar; fix(Home): add key to infocard mapping, add flex-wrap to footer

--- a/src/index.css
+++ b/src/index.css
@@ -46,8 +46,8 @@
     }
     /* Accordion.jsx > HomeAccordion */
     .hide-scrollbar {
-        width: calc(100% + 15px);  
-        padding-right: 15px;
+        width: calc(100% + 18px);  
+        padding-right: 10px;
     }
 }
 @tailwind components;
